[project]
name = "vr-delays"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "deltalake>=0.24.0",
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "polars>=1.21.0",
    "pydantic>=2.10.6",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.3",
    "types-seaborn>=0.13.2.20250111",
]
